--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="bg-white p-3 rounded-lg shadow-md border-2 border-gray-200">Score: <span id="current-score">0</span></div>
             </div>
             
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-6 text-center font-bold">
+            <div class="grid grid-cols-4 gap-2 md:gap-4 text-center font-bold">
                 <div id="box1" class="bg-yellow-200 text-yellow-800 rounded-2xl flex items-center justify-center aspect-square flashcard"></div>
                 <div id="box2" class="bg-blue-200 text-blue-800 rounded-2xl flex items-center justify-center aspect-square flashcard"></div>
                 <div id="box3" class="bg-pink-200 text-pink-800 rounded-2xl flex items-center justify-center aspect-square flashcard"></div>
@@ -414,6 +414,7 @@
     </script>
 </body>
 </html>
+
 
 
 
