--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 
         // Filter for inappropriate combinations
         const forbiddenCombinations = [
-            'f-u-ck', 'sh-i-t', 'c-o-ck', 'd-i-ck', 'p-i-ss', 'c-u-nt',
-            'b-i-tch', 'a-ss', 's-l-u-t', 'r-a-p-e', 'r-ai-p', 'wh-o-r-e'
+            'f-u-ck', 'sh-i-t', 'c-o-ck', 'd-i-ck', 'p-i-ss', 'c-u-nt', d-i-k,
+            'b-i-tch', 'a-ss', 's-l-u-t', 'r-a-p-e', 'r-ai-p', 'wh-o-r-e', 'b-i-ch'
         ];
 
         // Game State
