--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         // Filter for inappropriate combinations
         const forbiddenCombinations = [
             'f-u-ck', 'sh-i-t', 'c-o-ck', 'd-i-ck', 'p-i-ss', 'c-u-nt',
-            'b-i-tch', 'a-ss', 's-l-u-t', 'r-a-p-e', 'r-ai-p', 'wh-o-r-e'
+            'b-i-tch', 'a-ss', 's-l-u-t', 'r-a-p-e', 'r-ai-p', 'wh-o-r-e', 'f-u-x'
         ];
 
         // Game State
