Update consonants exclusion in box 3 definition

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 part1 = getRandomElement(pool1);
                 part2 = getRandomElement(pool2);
                 
-                // Define consonants for box 3, excluding 'y', 'w', 'h', 'j', and 'r'
+                // Define consonants for box 3, excluding 'y', 'w', 'h', 'j', 'k,' and 'r'
                 const consonantsForPool3 = patterns.consonants.filter(c => c !== 'y' && c !== 'w' && c !== 'h' && c !== 'j' && c !== 'r');
 
                 // Build the complete potential pool for box 3
